src/objects/Jurisdiction__c.object
<CustomObject>
    <description>Stores Agency and Department Information of DC Government.</description>
    <fields>
        <fullName>Agency__c</fullName>
        <description>This Field contains DC Government Agency Abbreviations like -  DDOT, DPW</description>
        <label>Servicing Agency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>This field lists all the Departments of DC Government</description>
        <label>Department</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Servicing_Agency_Expanded__c</fullName>
        <description>Expanded form of Servicing agency code</description>
        <label>Servicing Agency Expanded</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Agency Dept Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Agency__c</columns>
        <columns>Servicing_Agency_Expanded__c</columns>
        <columns>Department__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Homeless_Services_Jurisdiction</fullName>
        <filterScope>Queue</filterScope>
        <label>Homeless Services</label>
        <queue>Homeless_Services</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>OUC_SNOW_Queue_Jurisdiction</fullName>
        <filterScope>Queue</filterScope>
        <label>OUC SNOW Queue</label>
        <queue>OUC_SNOW_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Agency Dept Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agency Dept Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>